added reset function, fixed input and global var

--- a/timer.html
+++ b/timer.html
@@ -33,11 +33,11 @@
                     <form id="settings">
                         <div class="">
                             <label for="interval">Interval Length</label>
-                            <input id="interval" class="" type="number" name="interval" min="0" max="60" value="30">
+                            <input id="interval" class="" type="number" name="interval" min="0" max="60">
                         </div>
                         <div class="">
                             <label for="break">Break Length</label>
-                            <input id="break" class="" type="number" name="break" min="0" max="60" value="10">
+                            <input id="break" class="" type="number" name="break" min="0" max="60">
                         </div>
                     </form>
                     <div class="">
